force-app/main/default/objects/Administrador_de_Descuentos__c/Administrador_de_Descuentos__c.object-meta.xml
<CustomObject>
    <label>Administrador de Descuento</label>
    <nameField>
        <displayFormat>AD-{0000}</displayFormat>
        <label>Nombre de Administrador de Descuentos</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Administrador de Descuentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>