force-app/main/default/objects/Administrador_de_Descuentos__c/fields/Linea_de_Producto__c.field-meta.xml
<CustomField>
    <fullName>Linea_de_Producto__c</fullName>
    <label>Línea de Producto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FIT EX CVT</fullName>
            </value>
            <value>
                <fullName>CIVIC EX CVT</fullName>
            </value>
            <value>
                <fullName>CIVIC SI MT</fullName>
            </value>
            <value>
                <fullName>ACCORD EXL-T</fullName>
            </value>
            <value>
                <fullName>WR-V LX CVT 2WD</fullName>
            </value>
            <value>
                <fullName>WR-V EX 2WD</fullName>
            </value>
            <value>
                <fullName>HR-V LX 2WD</fullName>
            </value>
            <value>
                <fullName>HR-V EX 2WD</fullName>
            </value>
            <value>
                <fullName>CR-V CITY PLUS 2WD</fullName>
            </value>
            <value>
                <fullName>CR-V PRESTIGE 2WD</fullName>
            </value>
            <value>
                <fullName>CR-V EXL 1.5T 4WD</fullName>
            </value>
            <value>
                <fullName>CIVIC TYPE R</fullName>
            </value>
            <value>
                <fullName>WR-V LX MT 2WD</fullName>
            </value>
            <value>
                <fullName>HR-V LX 2WD X-TYLE</fullName>
            </value>
            <value>
                <fullName>HR-V EXL PRESTIGE 2WD</fullName>
            </value>
            <value>
                <fullName>PILOT EXL PRESTIGE 2WD</fullName>
            </value>
            <value>
                <fullName>PILOT EXL 4WD</fullName>
            </value>
            <value>
                <fullName>ODYSSEY EXLN-REST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>