force-app/main/default/objects/Administrador_de_Descuentos__c/fields/M_ximo_descuento_gerente_nacional__c.field-meta.xml
<CustomField>
    <fullName>M_ximo_descuento_gerente_nacional__c</fullName>
    <label>Máximo descuento gerente nacional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>