force-app/main/default/objects/Administrador_de_Descuentos__c/fields/Placa__c.field-meta.xml
<CustomField>
    <fullName>Placa__c</fullName>
    <label>Placa</label>
    <length>10</length>
    <type>Text</type>
</CustomField>