force-app/main/default/objects/Administrador_de_Descuentos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Linea_de_Producto__c</columns>
    <columns>Ano__c</columns>
    <columns>Placa__c</columns>
    <columns>Maximo_descuento_asesor__c</columns>
    <columns>Maximo_descuento_jefe_gerente__c</columns>
    <columns>M_ximo_descuento_gerente_nacional__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>